// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative *.proto

syntax = "proto3";

package proto;

option go_package = ".";


message Msg {
    int64 ver = 1;
    int64 operation = 2;
    string seq = 3;
    bytes body = 4;
}

message PushMsgReq {
    string user_id = 1;
    Msg msg = 2;
}

message SuccessResp {
    int64 code = 1;
    string msg = 2;
}

service Connect{
    rpc Push(PushMsgReq) returns (SuccessResp) {}
}